# SKSE_Template_CPP23modules

./: CMakeLists.txt  README.md
src/: myplugin.ixx  plugin.cpp
